=================================================================
Revision history for Perl extension Log::Dispatch::File::Stamped.
=================================================================

0.10_009  2013-05-01
                - even more fixing of testing of octal values on MSWin32

0.10_008  2013-04-30
                - more fixing of testing of octal values on MSWin32

0.10_007  2013-04-29
                - fix testing of octal values on MSWin32

0.10_003  2013-04-22
                - fix version declaration (Karen Etheridge)

0.10_002  2013-04-22
                - fix version requirements (Karen Etheridge)

0.10_001  2013-04-09
                - add support for all remaining Log::Dispatch::File
                  options (Karen Etheridge)

0.10 2011-09-25 - add support for permissions parameter
                  reported by Jonathan Peyser

0.09 2010-08-15 - fix incorrect number of skipped tests under perl < 5.8

0.08 2010-08-14 - skip binmode tests under perls < 5.8

0.07 2010-08-13 - add support for binmode parameter
                  patch by Tokuhiro Matsuno
                  (https://rt.cpan.org/Ticket/Display.html?id=60278)

0.06 2008-06-29 - added missing meta-spec to meta.yml
                - remove pod tests

0.05 2006-09-07 - fix typo which prevented correcting indexing by PAUSE
                - move .pm file to lib/
                - document log_message()

0.04 2006-09-07 - add Build.PL to build with Module::Build
                - add t/podcover.t to make CPANTS happy

0.03 2004-09-15 - Fix "Log::Dispatch::* object file already exists" warning
                  displayed on some platforms during "make test".
                - Require Test::More
                - Fix pod and add a pod test

0.02 2004-08-08 - log_to() wasn't working due to attribute name clash
                  (https://rt.cpan.org/Ticket/Display.html?id=7249)

0.01 2003-02-08 - Uploaded 0.01 to CPAN
