@@ -2,6 +2,8 @@
 Revision history for Perl extension Log::Dispatch::File::Stamped.
 =================================================================
 
+                - fixed testing of octal values on MSWin32, ONCE AND FOR ALL
+
 0.10_009  2013-05-01
                 - even more fixing of testing of octal values on MSWin32
 
